Rework to use Java 8 for the JVM tool and test fixtures
Changed java-tool convention plugin to use the shared configuration
plugin to reduce duplication of test dependencies.