@@ -1,7 +1,6 @@
 
 plugins {
-    id ("org.gradle.java")
-    id ("org.gradle.jacoco")
+    id ("teamcity.shared-configuration")
     id ("org.gradle.java-test-fixtures")
 }
 
@@ -9,33 +8,21 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    // configure dependencies that are compatible with Java 8
-    testImplementation (platform("org.junit:junit-bom:5.14.4"))
-    testImplementation ("org.junit.jupiter:junit-jupiter-api")
-    testImplementation ("org.junit.jupiter:junit-jupiter-params")
-    testImplementation ("org.hamcrest:hamcrest:3.0")
-    testImplementation ("org.mockito:mockito-core:4.11.0")
-
-    testRuntimeOnly ("org.junit.platform:junit-platform-launcher")
-    testRuntimeOnly ("org.junit.jupiter:junit-jupiter-engine")
-}
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(8)
-    }
-}
-
 tasks {
-    test {
-        useJUnitPlatform()
-        finalizedBy(jacocoTestReport)
+    val java8Compiler = project.javaToolchains.compilerFor {
+        languageVersion.set(JavaLanguageVersion.of(8))
     }
 
-    jacocoTestReport {
-        reports {
-            xml.required = true
-        }
+    compileJava {
+        javaCompiler = java8Compiler
+    }
+
+    compileTestFixturesJava {
+        javaCompiler= java8Compiler
+    }
+
+    test {
+        jvmArgs ("--add-opens")
+        jvmArgs ("jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED")
     }
 }
