@@ -25,6 +25,7 @@ tasks {
     test {
         useJUnitPlatform()
         finalizedBy(jacocoTestReport)
+        jvmArgs ("-XX:+EnableDynamicAgentLoading")
     }
 
     jacocoTestReport {
